<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tvUpgrade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/upgrade_description"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnUpgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.Button"
            android:text="@string/upgrade"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/tvUpgrade"
            app:layout_constraintStart_toStartOf="@id/tvUpgrade" />

        <TextView
            android:id="@+id/tvImport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/import_description"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/tvUpgrade"
            app:layout_constraintTop_toBottomOf="@id/btnUpgrade"
            app:layout_constraintEnd_toEndOf="@id/tvUpgrade"/>

        <Button
            android:id="@+id/btnImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.Button"
            android:text="@string/import_"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/tvImport"
            app:layout_constraintStart_toStartOf="@id/btnUpgrade" />

        <TextView
            android:id="@+id/tvRefresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/refresh_description"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/tvImport"
            app:layout_constraintTop_toBottomOf="@id/btnImport"
            app:layout_constraintEnd_toEndOf="@id/tvImport"/>

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.Button"
            android:text="@string/refresh"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/tvRefresh"
            app:layout_constraintStart_toStartOf="@id/btnImport" />

        <TextView
            android:id="@+id/tvRemove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/remove_description"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/tvRefresh"
            app:layout_constraintTop_toBottomOf="@id/btnRefresh"
            app:layout_constraintEnd_toEndOf="@id/tvRefresh"/>

        <Button
            android:id="@+id/btnRemove"
            style="@style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/redcolor"
            android:text="@string/remove"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/btnRefresh"
            app:layout_constraintTop_toBottomOf="@id/tvRemove" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>