<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBinFile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/bin_file_description"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnBinFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Widget.Button"
        android:text="@string/create_a_backup"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tvBinFile"
        app:layout_constraintStart_toStartOf="@id/tvBinFile" />

    <TextView
        android:id="@+id/tvBrainkey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/brainkey_description"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/tvBinFile"
        app:layout_constraintStart_toStartOf="@id/tvBinFile"
        app:layout_constraintTop_toBottomOf="@id/btnBinFile" />

    <Button
        android:id="@+id/btnBrainkey"
        style="@style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/view_and_copy"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/btnBinFile"
        app:layout_constraintTop_toBottomOf="@id/tvBrainkey" />

    <TextView
        android:id="@+id/tvWIFKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/wif_key_description"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/tvBrainkey"
        app:layout_constraintStart_toStartOf="@id/tvBrainkey"
        app:layout_constraintTop_toBottomOf="@id/btnBrainkey" />

    <Button
        android:id="@+id/btnWIFKey"
        style="@style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/view_and_copy"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/btnBrainkey"
        app:layout_constraintTop_toBottomOf="@id/tvWIFKey" />

</android.support.constraint.ConstraintLayout>