<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateSeedActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:text="@string/txt_brain_key_info"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="15dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="112dp"
        app:layout_constraintBottom_toTopOf="@+id/tilPinConfirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietPin"
            android:maxLength="32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_6_digits_pin"
            android:inputType="number"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPinConfirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tilAccountName"
        app:layout_constraintTop_toBottomOf="@+id/tilPin"
        app:layout_constraintStart_toStartOf="@id/tilPin"
        app:layout_constraintEnd_toEndOf="@id/tilPin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietPinConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_6_digits_pin_confirm"
            android:maxLength="32"
            android:inputType="number"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAccountName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/tilPinConfirmation"
        app:layout_constraintStart_toStartOf="@id/tilPinConfirmation"
        app:layout_constraintEnd_toEndOf="@id/tilPinConfirmation">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietAccountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_account_name"
            android:inputType="textMultiLine"
            android:maxLength="255"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:background="@color/redColor"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomStatusBar"
        app:layout_constraintStart_toStartOf="@id/tilAccountName"
        app:layout_constraintTop_toBottomOf="@+id/tilAccountName" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="4dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/create_wallet"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tilAccountName"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />
<!--
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/bottomBarColor"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvAppVersion_brain_key_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/v_1_0_beta" />

        <TextView
            android:id="@+id/tvBlockNumberHead_brain_key_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/block_number" />

        <ImageView
            android:id="@+id/ivSocketConnected_brain_key_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:src="@drawable/icon_setting"
            android:visibility="invisible" />
    </LinearLayout>
-->
    <cy.agorise.crystalwallet.util.BottomStatusBar
        android:id="@+id/bottomStatusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>
